Stuff is getting to the DB

--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -12,16 +12,22 @@
     <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
-    <form class="people">
+    <form class="person">
       <input type="text" name="first_name" placeholder="First Name" required/>
       <input type="text" name="last_name" placeholder="Last Name" required/>
-      <submit>Submit</submit>
+      <input type="submit" id="submit-person" />
     </form>
 
     <form class="patronus">
       <input id="patronus_input" type="text" name="patronus" placeholder="Patronus"/>
-      <submit>Submit</submit>
+      <input type="submit" id="submit-patronus" />
     </form>
+
+    <div class="container">
+
+    </div>
+
+    <select></select>
 
   </body>
 </html>
